@@ -453,7 +453,7 @@ const char *module_extra_tuningdb_block (MAYBE_UNUSED const hashconfig_t *hashco
     "GeForce_RTX_3070                                *       27700   1      46       A\n"
     "GeForce_RTX_3090                                *       27700   1      82       A\n"
     "ALIAS_AMD_RX480                                 *       27700   1      15       A\n"
-    "ALIAS_AMD_Vega64                                *       27700   1      31       A\n"
+    "ALIAS_AMD_Vega64                                *       27700   1      28       A\n"
     "ALIAS_AMD_MI100                                 *       27700   1      79       A\n"
     "ALIAS_AMD_RX6900XT                              *       27700   1      59       A\n"
   ;
